gen/org/dmitrigb/ideanim/parser/NimParser.java
// This is a generated file. Not intended for manual editing.
package org.dmitrigb.ideanim.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static org.dmitrigb.ideanim.psi.ElementTypesBase.*;
import static org.dmitrigb.ideanim.parser.ParserUtil.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class NimParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, EXTENDS_SETS_);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    if (t == ASSIGNMENT_EXPR) {
      r = AssignmentExpr(b, 0);
    }
    else if (t == BLOCK) {
      r = Block(b, 0);
    }
    else if (t == BLOCK_STMT) {
      r = BlockStmt(b, 0);
    }
    else if (t == BRACKET_CTOR) {
      r = BracketCtor(b, 0);
    }
    else if (t == BRACKET_EXPR) {
      r = BracketExpr(b, 0);
    }
    else if (t == BREAK_STMT) {
      r = BreakStmt(b, 0);
    }
    else if (t == CALL_EXPR) {
      r = CallExpr(b, 0);
    }
    else if (t == CASE_EXPR) {
      r = CaseExpr(b, 0);
    }
    else if (t == CASE_STMT) {
      r = CaseStmt(b, 0);
    }
    else if (t == CAST_EXPR) {
      r = CastExpr(b, 0);
    }
    else if (t == COMMAND_EXPR) {
      r = CommandExpr(b, 0);
    }
    else if (t == CONST_DEF) {
      r = ConstDef(b, 0);
    }
    else if (t == CONST_SECT) {
      r = ConstSect(b, 0);
    }
    else if (t == CONTINUE_STMT) {
      r = ContinueStmt(b, 0);
    }
    else if (t == CTOR_ARG) {
      r = CtorArg(b, 0);
    }
    else if (t == DISCARD_STMT) {
      r = DiscardStmt(b, 0);
    }
    else if (t == DISTINCT_TYPE_EXPR) {
      r = DistinctTypeExpr(b, 0);
    }
    else if (t == DO_BLOCK) {
      r = DoBlock(b, 0);
    }
    else if (t == DOT_EXPR) {
      r = DotExpr(b, 0);
    }
    else if (t == ENUM_DEF) {
      r = EnumDef(b, 0);
    }
    else if (t == ENUM_MEMBER) {
      r = EnumMember(b, 0);
    }
    else if (t == EXPR_STMT) {
      r = ExprStmt(b, 0);
    }
    else if (t == FOR_STMT) {
      r = ForStmt(b, 0);
    }
    else if (t == GENERIC_PARAM) {
      r = GenericParam(b, 0);
    }
    else if (t == GROUPED_EXPR) {
      r = GroupedExpr(b, 0);
    }
    else if (t == IDENT_PRAGMA_PAIR) {
      r = IdentPragmaPair(b, 0);
    }
    else if (t == IDENTIFIER) {
      r = Identifier(b, 0);
    }
    else if (t == IDENTIFIER_DEF) {
      r = IdentifierDef(b, 0);
    }
    else if (t == IDENTIFIER_EXPR) {
      r = IdentifierExpr(b, 0);
    }
    else if (t == IF_EXPR) {
      r = IfExpr(b, 0);
    }
    else if (t == IF_STMT) {
      r = IfStmt(b, 0);
    }
    else if (t == IMPORT_STMT) {
      r = ImportStmt(b, 0);
    }
    else if (t == INCLUDE_STMT) {
      r = IncludeStmt(b, 0);
    }
    else if (t == ITERATOR_DEF) {
      r = IteratorDef(b, 0);
    }
    else if (t == LET_SECT) {
      r = LetSect(b, 0);
    }
    else if (t == LITERAL) {
      r = Literal(b, 0);
    }
    else if (t == MACRO_DEF) {
      r = MacroDef(b, 0);
    }
    else if (t == NIL_TOKEN) {
      r = NilToken(b, 0);
    }
    else if (t == OBJECT_CTOR) {
      r = ObjectCtor(b, 0);
    }
    else if (t == OBJECT_DEF) {
      r = ObjectDef(b, 0);
    }
    else if (t == OBJECT_FIELDS) {
      r = ObjectFields(b, 0);
    }
    else if (t == PATTERN) {
      r = Pattern(b, 0);
    }
    else if (t == PRAGMA) {
      r = Pragma(b, 0);
    }
    else if (t == PRAGMA_STMT) {
      r = PragmaStmt(b, 0);
    }
    else if (t == PREFIX_EXPR) {
      r = PrefixExpr(b, 0);
    }
    else if (t == PROC_DEF) {
      r = ProcDef(b, 0);
    }
    else if (t == PROC_EXPR) {
      r = ProcExpr(b, 0);
    }
    else if (t == PTR_TYPE_EXPR) {
      r = PtrTypeExpr(b, 0);
    }
    else if (t == RAISE_STMT) {
      r = RaiseStmt(b, 0);
    }
    else if (t == REF_TYPE_EXPR) {
      r = RefTypeExpr(b, 0);
    }
    else if (t == RETURN_STMT) {
      r = ReturnStmt(b, 0);
    }
    else if (t == SET_OR_TABLE_CTOR) {
      r = SetOrTableCtor(b, 0);
    }
    else if (t == STATIC_STMT) {
      r = StaticStmt(b, 0);
    }
    else if (t == STATIC_TYPE_EXPR) {
      r = StaticTypeExpr(b, 0);
    }
    else if (t == STMT_LIST_EXPR) {
      r = StmtListExpr(b, 0);
    }
    else if (t == TEMPLATE_DEF) {
      r = TemplateDef(b, 0);
    }
    else if (t == TRY_STMT) {
      r = TryStmt(b, 0);
    }
    else if (t == TUPLE_CTOR) {
      r = TupleCtor(b, 0);
    }
    else if (t == TYPE_DEF) {
      r = TypeDef(b, 0);
    }
    else if (t == TYPE_DESC) {
      r = TypeDesc(b, 0);
    }
    else if (t == TYPE_SECT) {
      r = TypeSect(b, 0);
    }
    else if (t == VAR_DEF) {
      r = VarDef(b, 0);
    }
    else if (t == VAR_SECT) {
      r = VarSect(b, 0);
    }
    else if (t == VAR_TYPE_EXPR) {
      r = VarTypeExpr(b, 0);
    }
    else if (t == WHEN_EXPR) {
      r = WhenExpr(b, 0);
    }
    else if (t == WHEN_STMT) {
      r = WhenStmt(b, 0);
    }
    else if (t == WHILE_STMT) {
      r = WhileStmt(b, 0);
    }
    else if (t == YIELD_STMT) {
      r = YieldStmt(b, 0);
    }
    else {
      r = parse_root_(t, b, 0);
    }
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return NimFile(b, l + 1);
  }

  public static final TokenSet[] EXTENDS_SETS_ = new TokenSet[] {
    create_token_set_(IDENTIFIER, IDENTIFIER_DEF),
    create_token_set_(BLOCK_STMT, BREAK_STMT, CASE_STMT, CONST_SECT,
      CONTINUE_STMT, DISCARD_STMT, EXPR_STMT, FOR_STMT,
      IF_STMT, IMPORT_STMT, ITERATOR_DEF, LET_SECT,
      MACRO_DEF, PRAGMA_STMT, PROC_DEF, RAISE_STMT,
      RETURN_STMT, STATIC_STMT, TEMPLATE_DEF, TRY_STMT,
      TYPE_SECT, VAR_SECT, WHEN_STMT, WHILE_STMT,
      YIELD_STMT),
    create_token_set_(ASSIGNMENT_EXPR, BRACKET_CTOR, BRACKET_EXPR, CALL_EXPR,
      CASE_EXPR, CAST_EXPR, COMMAND_EXPR, DISTINCT_TYPE_EXPR,
      DOT_EXPR, ENUM_DEF, GROUPED_EXPR, IDENTIFIER_EXPR,
      IF_EXPR, LITERAL, NIL_TOKEN, OBJECT_CTOR,
      OBJECT_DEF, PREFIX_EXPR, PROC_EXPR, PTR_TYPE_EXPR,
      REF_TYPE_EXPR, SET_OR_TABLE_CTOR, STMT_LIST_EXPR, TUPLE_CTOR,
      VAR_TYPE_EXPR, WHEN_EXPR),
  };

  /* ********************************************************** */
  // T_EQ &OPTIND expr
  public static boolean AssignmentExpr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AssignmentExpr")) return false;
    if (!nextTokenIs(b, T_EQ)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _LEFT_, ASSIGNMENT_EXPR, null);
    r = consumeToken(b, T_EQ);
    p = r; // pin = 1
    r = r && AssignmentExpr_1(b, l + 1);
    r = r && expr(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // &OPTIND
  private static boolean AssignmentExpr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AssignmentExpr_1")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _AND_);
    r = indOpt(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // <<indented <<listOf complexOrSimpleStmt (T_SEMICOLON (&INDNONE | &INDEQ) | &INDEQ)>>>>
  //     | !<<inSemiStmtList>> <<listOf (&INDNONE simpleStmt) (T_SEMICOLON)>>
  //     | &<<inSemiStmtList>> simpleStmt
  public static boolean Block(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Block")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BLOCK, "<block>");
    r = indented(b, l + 1, Block_0_0_parser_);
    if (!r) r = Block_1(b, l + 1);
    if (!r) r = Block_2(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // T_SEMICOLON (&INDNONE | &INDEQ) | &INDEQ
  private static boolean Block_0_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Block_0_0_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Block_0_0_1_0(b, l + 1);
    if (!r) r = Block_0_0_1_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // T_SEMICOLON (&INDNONE | &INDEQ)
  private static boolean Block_0_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Block_0_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, T_SEMICOLON);
    r = r && Block_0_0_1_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // &INDNONE | &INDEQ
  private static boolean Block_0_0_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Block_0_0_1_0_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Block_0_0_1_0_1_0(b, l + 1);
    if (!r) r = Block_0_0_1_0_1_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // &INDNONE
  private static boolean Block_0_0_1_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Block_0_0_1_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _AND_);
    r = indNone(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // &INDEQ
  private static boolean Block_0_0_1_0_1_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Block_0_0_1_0_1_1")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _AND_);
    r = indEq(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // &INDEQ
  private static boolean Block_0_0_1_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Block_0_0_1_1")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _AND_);
    r = indEq(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // !<<inSemiStmtList>> <<listOf (&INDNONE simpleStmt) (T_SEMICOLON)>>
  private static boolean Block_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Block_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Block_1_0(b, l + 1);
    r = r && listOf(b, l + 1, Block_1_1_0_parser_, Block_1_1_1_parser_);
    exit_section_(b, m, null, r);
    return r;
  }

  // !<<inSemiStmtList>>
  private static boolean Block_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Block_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !inSemiStmtList(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // &INDNONE simpleStmt
  private static boolean Block_1_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Block_1_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Block_1_1_0_0(b, l + 1);
    r = r && simpleStmt(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // &INDNONE
  private static boolean Block_1_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Block_1_1_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _AND_);
    r = indNone(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (T_SEMICOLON)
  private static boolean Block_1_1_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Block_1_1_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, T_SEMICOLON);
    exit_section_(b, m, null, r);
    return r;
  }

  // &<<inSemiStmtList>> simpleStmt
  private static boolean Block_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Block_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Block_2_0(b, l + 1);
    r = r && simpleStmt(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // &<<inSemiStmtList>>
  private static boolean Block_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Block_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _AND_);
    r = inSemiStmtList(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // T_BLOCK &INDNONE Identifier? T_COLON stmt
  public static boolean BlockStmt(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BlockStmt")) return false;
    if (!nextTokenIs(b, T_BLOCK)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, BLOCK_STMT, null);
    r = consumeToken(b, T_BLOCK);
    p = r; // pin = 1
    r = r && BlockStmt_1(b, l + 1);
    r = r && BlockStmt_2(b, l + 1);
    r = r && consumeToken(b, T_COLON);
    r = r && stmt(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // &INDNONE
  private static boolean BlockStmt_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BlockStmt_1")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _AND_);
    r = indNone(b, l + 1);
